[package]
name = "zdump"
version = "1.0.2"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2018"
repository = "https://github.com/nicolasbauw/rs-zdump"
categories = ["command-line-utilities"]
keywords = ["timezone", "timechanges", "zdump", "time", "date"]
description = "An alternative version of the zdump utility"
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tzparse = "1.0.3"
structopt = { version = "0.3.2", default-features = false }
