[package]
name = "zdump"
version = "1.3.5"
authors = ["Nicolas BAUW <nbauw@hotmail.com>"]
edition = "2021"
repository = "https://github.com/nicolasbauw/rs-zdump"
categories = ["command-line-utilities", "visualization"]
keywords = ["timezone", "transition", "time", "date", "zdump"]
description = "A Rust version of the zdump utility."
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libtzfile = { version = "3.0", features = ["parse"] }
